# xt_oss

./: .env.example  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
assets/: list_object_v2.xml  object1.xml  object2.xml  php_api_list.md  xt-oss.xmind
assets/samples/: error.html
assets/samples/sql/: SQL-File-10000-Rows.sql
assets/samples/static/: index.html
examples/: 1.ex_create_buckets.rs  3.ex_del_object_all.rs  5.ex_list_object_v2_all.rs  6.ex_get_big_object.rs  aa_create_buckets.rs  aa_del_object_all.rs  aa_delete_all_buckets.rs  aa_get_big_object.rs  aa_list_object_v2_all.rs  aa_sync_sample_up.rs  aa_sync_smaple_down.rs  acceleration.rs  api_bucket.rs  api_bucket_acl_get.rs  api_bucket_acl_put.rs  api_bucket_cname_create_token.rs  api_bucket_cname_del.rs  api_bucket_cname_get_token.rs  api_bucket_cname_list.rs  api_bucket_cname_put.rs  api_bucket_cors_del.rs  api_bucket_cors_get.rs  api_bucket_cors_options.rs  api_bucket_cors_put.rs  api_bucket_encryption_del.rs  api_bucket_encryption_get.rs  api_bucket_encryption_put.rs  api_bucket_get_info.rs  api_bucket_get_location.rs  api_bucket_get_stat.rs  api_bucket_get_versioning.rs  api_bucket_lifecycle_del.rs  api_bucket_lifecycle_get.rs  api_bucket_lifecycle_put.rs  api_bucket_list_cname.rs  api_bucket_list_object_versions.rs  api_bucket_list_objects.rs  api_bucket_list_objects_v2.rs  api_bucket_logging_del.rs  api_bucket_logging_get.rs  (+97 more)
examples/buckets/: bucket_get_stat.rs  delete_bucket.rs  get_bucket_location.rs  get_bucket_stat.rs  list_objects.rs  list_objects_v2.rs  put_bucket.rs  put_bucket_transfer_acceleration.rs
examples/buckets/stand/: delete_bucket.rs  get_bucket_info.rs  get_bucket_location.rs  list_objects.rs  put_bucket.rs
examples/buckets/versions/: get_bucket_versioning.rs  list_object_versions.rs  put_bucket_versioning.rs
examples/objects/: get_object_meta.rs
examples/objects/stand/: get_object_meta.rs  head_object.rs  put_object.rs
examples/region/: describe_regions.rs
examples/request/: bucket_get_cors.rs  bucket_info.rs  bucket_put_cors.rs  list_buckets.rs  regions.rs
examples/samples/: index.html
examples/samples/excel/: Spreadsheet-1000-rows.xls  Spreadsheet-5000-rows.xls
examples/samples/txt/: TextFile_100kb.txt
examples/service/: api_list_buckets.rs
examples/web_app/: main.rs
examples/web_app/templates/: index.html
examples/web_callback_service/: main.rs
examples/webapp/: main.rs
examples_back/: acceleration.rs  bucket.rs  bucket_cname.rs  bucket_encryption.rs  bucket_llifecycle.rs  bucket_style.rs  bucket_worm.rs  object.rs  object_delete.rs  object_get.rs  region.rs  service.rs
src/: arguments.rs  client.rs  common.rs  entities.rs  lib.rs  models.rs  oss.rs  params.rs  prelude.rs  types.rs  util.rs  utils.rs  utls.rs
src/api/: bucket.rs  mod.rs  objects.rs  region.rs  service.rs
src/api/bucket/: acl.rs  cname.rs  mod.rs  referer.rs  stand.rs  style.rs
src/api/objects/: mod.rs  mult_upload.rs  stand.rs
src/api/region/: mod.rs
src/api/service/: mod.rs
src/oss/: api.rs  arguments.rs  auth.rs  entities.rs  error.rs  http.rs  mod.rs
src/oss/api/: builders.rs  region.rs  service.rs
src/oss/api/bucket/: acceleration.rs  acl.rs  builders.rs  cname.rs  cors.rs  encryption.rs  lifecycle.rs  log.rs  mod.rs  payment.rs  policy.rs  referer.rs  stand.rs  style.rs  tags.rs  versions.rs  website.rs  worm.rs
src/oss/api/objects/: acl.rs  builders.rs  live_channel.rs  mod.rs  mult_upload.rs  multi_upload.rs  params.rs  stand.rs  symlink.rs  taging.rs
src/oss/api/region/: mod.rs
src/oss/api/service/: mod.rs
src/oss/entities/: acceleration.rs  acl.rs  bucket.rs  callback.rs  cname.rs  cors.rs  encryption.rs  lifecycle.rs  log.rs  mod.rs  mult_upload.rs  multi_upload.rs  multipart.rs  object.rs  payment.rs  private.rs  referer.rs  region.rs  style.rs  tag.rs  version.rs  website.rs  worm.rs
src/traits/: mod.rs  service.rs
