[package]
name = "xt-oss"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
authors = ["isme.sun <isme.sun@icloud.com>"]
description = "Aliyun OSS SDK"
# license = "MIT OR Apache-2.0"
homepage = "https://www.xuetube.com/res/xuetiube-oss"
keywords = ["oss", "aliyun"]
categories = ["filesystem"]
# publish = false

[badges]
maintenance = { status = "actively-developed" }


[[example]]
name = "request_regions"
path = "examples/request/regions.rs"

[[example]]
name = "request_list_buckets"
path = "examples/request/list_buckets.rs"

[[example]]
name = "request_bucket_info"
path = "examples/request/bucket_info.rs"

[[example]]
name = "request_bucket_get_cors"
path = "examples/request/bucket_get_cors.rs"

[[example]]
name = "request_bucket_put_cors"
path = "examples/request/bucket_put_cors.rs"

[[example]]
name = "put_bucket"
path = "examples/buckets/put_bucket.rs"

[[example]]
name = "bucket_get_stat"
path = "examples/buckets/bucket_get_stat.rs"

[[example]]
name = "describe_regions"
path = "examples/region/describe_regions.rs"

[[example]]
name = "api_list_buckets"
path = "examples/service/api_list_buckets.rs"

[[example]]
name = "put_bucket_transfer_acceleration"
path = "examples/buckets/put_bucket_transfer_acceleration.rs"

[[example]]
name = "get_object_meta"
path = "examples/objects/get_object_meta.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
base64 = "0.21.5"
chrono = { version = "0.4.31" }
hmac-sha1 = "0.2.1"
rust-crypto = "0.2.36"
serde_qs = "0.12.0"
bytes = "1.5.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.23"}
serde = { version = "1.0.192", features = ["serde_derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
url = "2.5.0"
urlencoding = "2.1.3"

[dev-dependencies]
log = "0.4.20"
env_logger = "0.11.0"
dotenv = "0.15.0"
serde_json = "1.0.108"
urlencoding = "2.1.3"
