[package]
name = "xt-oss"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
authors = ["isme.sun <isme.sun@icloud.com>"]
description = "Aliyun OSS SDK"
# license = "MIT OR Apache-2.0"
homepage = "https://www.xuetube.com/res/xuetiube-oss"
keywords = ["oss", "aliyun"]
categories = ["filesystem"]
# publish = false

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
chrono = { version = "0.4.31" }
hmac-sha1 = "0.2.2"
rust-crypto = "0.2.36"
serde_qs = "0.12.0"
bytes = "1.5.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.23" }
serde = { version = "1.0.192", features = ["serde_derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
url = "2.5.0"
urlencoding = "2.1.3"
futures = "0.3.30"
hex = "0.4.3"

[dev-dependencies]
log = "0.4.20"
env_logger = "0.11.0"
dotenv = "0.15.0"
serde_json = "1.0.108"
urlencoding = "2.1.3"
walkdir = "2.4.0"
mime_guess = "2.0.4"
dirs = "5.0.1"
axum = "0.7.4"